# metar-taf-decoder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  decode_metar.py  decode_taf.py  metar_example.txt  metar_exmaple.txt  pyproject.toml  requirements-dev.txt  setup.py
.github/: dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  performance.yml  release.yml  security.yml
src/weather_decoder/: __init__.py  __main__.py  models.py
src/weather_decoder/cli/: metar_cli.py  taf_cli.py
src/weather_decoder/constants/: __init__.py  change_codes.py  common.py  glossary_codes.py  military_codes.py  patterns.py  pressure_codes.py  report_codes.py  runway_codes.py  station_codes.py  weather_codes.py
src/weather_decoder/core/: metar_decoder.py  taf_decoder.py
src/weather_decoder/formatters/: common.py  metar_formatter.py  taf_formatter.py
src/weather_decoder/parsers/: __init__.py  base_parser.py  pressure_parser.py  remarks_parser.py  runway_parser.py  sea_parser.py  sky_parser.py  temperature_parser.py  time_parser.py  token_stream.py  trend_parser.py  visibility_parser.py  weather_parser.py  wind_parser.py  windshear_parser.py
src/weather_decoder/parsers/remarks/: __init__.py  automation.py  common.py  lightning.py  parser.py  precipitation.py  pressure.py  recent_weather.py  registry.py  sky.py  temperature.py  visibility.py  wind.py
src/weather_decoder/utils/: __init__.py  constants.py  formatters.py  patterns.py
src/weather_decoder/validators/: __init__.py  metar_validator.py  taf_validator.py
tests/: conftest.py  test_decoders.py  test_formatters.py  test_models_and_utils.py  test_parsers.py  test_public_api.py  test_remarks.py  test_validation.py
tests/cli/: test_cli_smoke.py
tests/core/: test_decoders.py
tests/fixtures/metar/: basic.txt
tests/fixtures/taf/: basic.txt
tests/formatters/: test_formatters.py
tests/models/: test_models_and_common.py
tests/parsers/: test_parsers.py
tests/parsers/remarks/: __init__.py  helpers.py  test_automation.py  test_lightning.py  test_parser.py  test_precipitation.py  test_pressure.py  test_recent_weather.py  test_sky.py  test_temperature.py  test_visibility.py  test_wind.py
tests/public_api/: test_imports.py
tests/validators/: test_validation.py
weather_decoder/: __init__.py  models.py
weather_decoder/cli/: common.py  metar_cli.py  taf_cli.py
weather_decoder/constants/: __init__.py  change_codes.py  glossary_codes.py  location_codes.py  military_codes.py  pressure_codes.py  report_codes.py  runway_codes.py  sky_codes.py  station_codes.py  weather_codes.py
weather_decoder/core/: metar_decoder.py  taf_decoder.py
weather_decoder/data/: __init__.py  metar_data.py  taf_data.py
weather_decoder/formatters/: __init__.py  common.py  metar_formatter.py  taf_formatter.py
weather_decoder/parsers/: __init__.py  base_parser.py  icing_parser.py  pressure_parser.py  remarks_parser.py  runway_parser.py  sea_parser.py  sky_parser.py  temperature_parser.py  time_parser.py  trend_parser.py  turbulence_parser.py  visibility_parser.py  weather_parser.py  wind_parser.py  windshear_parser.py
weather_decoder/utils/: __init__.py  constants.py  formatters.py  patterns.py
