# Build system configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "weather-decoder"
version = "1.0.9"
description = "A comprehensive METAR and TAF decoder for aviation weather reports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Justin"}
]
requires-python = ">=3.8"
keywords = ["metar", "taf", "aviation", "weather", "meteorology", "parsing", "decoder"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Source = "https://github.com/6639835/metar-taf-decoder"
"Bug Reports" = "https://github.com/6639835/metar-taf-decoder/issues"

[project.scripts]
decode-metar = "weather_decoder.cli.metar_cli:main"
decode-taf = "weather_decoder.cli.taf_cli:main"

# Setuptools configuration
[tool.setuptools.packages.find]
where = ["."]

# Black configuration
[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | archive
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 127
known_first_party = ["weather_decoder"]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "archive"]
skips = ["B101", "B601"]

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true once type hints are added
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["weather_decoder"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
