[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-decoder"
version = "1.1.4"
description = "A comprehensive METAR and TAF decoder for aviation weather reports"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Justin" }]
requires-python = ">=3.8"
keywords = ["metar", "taf", "aviation", "weather", "meteorology", "parsing", "decoder"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]

[project.urls]
Source = "https://github.com/6639835/metar-taf-decoder"
"Bug Reports" = "https://github.com/6639835/metar-taf-decoder/issues"

[project.scripts]
decode-metar = "weather_decoder.cli.metar_cli:main"
decode-taf = "weather_decoder.cli.taf_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src", "tests"]
extend-exclude = ["archive", "docs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"decode_*.py" = ["E402"]
"tests/**/*.py" = ["F401", "F841"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config --verbose --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.9"
files = ["src/weather_decoder", "decode_metar.py", "decode_taf.py"]
mypy_path = "src"
exclude = ["^tests/"]
follow_imports = "silent"
warn_unused_configs = true
pretty = true
show_error_codes = true

[tool.coverage.run]
source = ["weather_decoder"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/archive/*",
    "*/cli/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
